adding assign,unassign and get licenses status services:
Former-commit-id: ddc57925b0c4612c2483f4521ed15624687aa859 [formerly 28d9e9ee11724e32e14e70e0583f63391f00b424] [formerly 99478415159b0dda6fcabf15e75873841a76ca7c [formerly 5e4de2cfb8508823557492b77ea1ac26c97ad281]]
Former-commit-id: 1144c10fbb9f35d566a757a2ae44004f7916cf6f [formerly 1d977198c772c5cc77ab0244753f460fd7dc7d9c]
Former-commit-id: bc8f7763020ddc26677b4e355dda5ade149d8c2d

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -81,13 +81,13 @@
             <i class="fa fa-user"></i><span class="btn-text"> {{ _('Remove user')}}</span>
                
           </button>
-          <button style="" ng-class="{disabled: selected_users.length==0}" title="Assign licenses" class="btn btn-sm green task_action" ng-click="beforecloseTask()">
+          <button style="" ng-class="{disabled: selected_users.length==0}" title="Assign licenses" class="btn btn-sm green task_action" ng-click="assignLicenses()">
             <i class="fa fa-mail-forward"></i>
             <span class="btn-text">
                {{ _('Assign licenses')}}
             </span>
           </button>
-          <button ng-class="{disabled: selected_users.length==0}" title="Unassign licenses" class="btn btn-sm btn-default task_action" ng-click="reopenTask()">
+          <button ng-class="{disabled: selected_users.length==0}" title="Unassign licenses" class="btn btn-sm btn-default task_action" ng-click="unassignLicenses()">
                 <span class="btn-text">
                    {{ _('Unassign licenses')}}
                 </span>
