--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -45,9 +45,12 @@
         <i class="fa  fa-group "></i>
          26 {{ _(' Users')}} <!--nb users>-->
        </div>
-       <div class="col-lg">
+       <div class="col-sm">
         <i class="fa  fa-key "></i>
-         20 {{ _(' licenses')}}  <i class="fa  fa-user "></i>     15  {{ _(' assigned')}}  <!--nb licenses>-->
+         20 {{ _(' licenses')}}  <!--nb licenses>-->
+       </div>
+       <div class="col-sm">
+         <i class="fa  fa-user "></i> 15  {{ _(' assigned')}}  <!--nb users>-->
        </div>
        <div class="col-sm">
        <i class="fa  fa-ticket "></i>
@@ -71,28 +74,38 @@
      </div>
      <div class="showPage margin-bottom-15 col-md-12 task-actions" style="padding-top:10px; padding-bottom:10px;">
         <div class="col-md-12" style="/* margin-bottom:15px; */">
-          <button title="Add new user" class="btn btn-sm blue task_action" ng-click="reopenTask()">
-              +            
-             <i class="fa fa-user"></i><span class="btn-text">  {{ _('Add new user')}}</span>
-               
-           </button>
-           <button ng-class="{disabled: selected_users.length==0}" title="Remove user" class="btn btn-sm btn-default task_action" ng-click="reopenTask()" style="/* font-weight: bold; */">
-              -           
-            <i class="fa fa-user"></i><span class="btn-text"> {{ _('Remove user')}}</span>
-               
-          </button>
-          <button style="" ng-class="{disabled: selected_users.length==0}" title="Assign licenses" class="btn btn-sm green task_action" ng-click="beforecloseTask()">
-            <i class="fa fa-mail-forward"></i>
-            <span class="btn-text">
-               {{ _('Assign licenses')}}
-            </span>
-          </button>
-          <button ng-class="{disabled: selected_users.length==0}" title="Unassign licenses" class="btn btn-sm btn-default task_action" ng-click="reopenTask()">
+          <form class="form-inline newLeadForm " role="form" ng-show="showInviteForm">
+              <div class="form-group sm-group" style="">
+                  <label class="sr-only" for="exampleInputEmail2">Email</label>
+                  <input type="email" class="form-control ng-pristine ng-invalid ng-invalid-required ng-valid-email" id="exampleInputEmail2" ng-model="email.email" placeholder="Enter a email" required="">
+              </div>
+              <button type="submit" class="btn red jfk-button jfk-button-action" ng-click="pushElement(email, emails, 'emails')">Invite</button>
+              <button type="submit" ng-click="showInviteForm = false" class="btn btn-default">X</button>
+          </form>
+          <div class="conta" ng-hide="showInviteForm">
+                <button title="Add new user" class="btn btn-sm blue task_action" ng-click="showInviteForm=true">
+                  +            
+                 <i class="fa fa-user"></i><span class="btn-text">  {{ _('Add new user')}}</span>
+                   
+               </button>
+               <button ng-class="{disabled: selected_users.length==0}" title="Remove user" class="btn btn-sm btn-default task_action" ng-click="reopenTask()" style="/* font-weight: bold; */">
+                  -           
+                <i class="fa fa-user"></i><span class="btn-text"> {{ _('Remove user')}}</span>
+                   
+              </button>
+              <button style="" ng-class="{disabled: selected_users.length==0}" title="Assign licenses" class="btn btn-sm green task_action" ng-click="beforecloseTask()">
+                <i class="fa fa-mail-forward"></i>
                 <span class="btn-text">
-                   {{ _('Unassign licenses')}}
+                   {{ _('Assign licenses')}}
                 </span>
-                 <i class="fa fa-mail-forward"></i>
-          </button>
+              </button>
+              <button ng-class="{disabled: selected_users.length==0}" title="Unassign licenses" class="btn btn-sm btn-default task_action" ng-click="reopenTask()">
+                    <span class="btn-text">
+                       {{ _('Unassign licenses')}}
+                    </span>
+                     <i class="fa fa-mail-forward"></i>
+              </button>
+          </div>
           <div class="clearfix"></div>
        </div>
       </div>
@@ -114,11 +127,11 @@
                     <a href="" ng-click="predicate = 'email'; reverse=false"> {{ _('Email')}}</a>
                   </th>
                   <th>
-                    <a href="" ng-click="predicate = 'status'; reverse=false"> {{ _('Status')}}</a>
+                    <a href="" ng-click="predicate = 'status'; reverse=false"> {{ _('Licence')}}</a>
                    
                   </th>
                   <th>
-                    <a href="" ng-click="predicate = 'licence'; reverse=false"> {{ _('Licence')}}</a>
+                    <a href="" ng-click="predicate = 'licence'; reverse=false"> {{ _('Administrator')}}</a>
                     
                   </th>
                 </tr>
@@ -135,11 +148,11 @@
                   <td>
                      <%= user.email %>
                   </td>
-                  <td>
-                   <%= user.status %>
+                  <td style="padding-left: 22px;">
+                     {{ _("Yes")}}
                   </td>
-                  <td>
-                    Yes
+                  <td  style="padding-left: 44px;">
+                    <input title='{{ _("Select all Users")}}' type="checkbox" ng-checked="" ng-click="">
                   </td>
                 </tr>                
                 </tbody>
