fix bug in opportunity design
Former-commit-id: 54301819b50b288ecfb70c2057e3dd65d2b0402f [formerly ae7ba94104dabd7f17cbe6c99b7d81b29696b140] [formerly 227f91ef8004ad1594d77bf3b28c2d946140a00c [formerly 90594027db4195a7210211d6274045a0a2ab266f]]
Former-commit-id: ca956b88f70e8dc4dcc82d673a5929d2d780e1a5 [formerly 5dff13a16bf6f24850cdbb2a50d34935ccf99c95]
Former-commit-id: b38db25527e370dd8750e6f38281f75f91f40382

--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -238,7 +238,7 @@
 
 
                               </div>
-                              <div class="news-blocks blank-card blank-card-bluep">
+                              <div class="customField news-blocks blank-card blank-card-bluep">
 
                                <h3>{{ _('Custom Fields') }}</h3>
 
