change the design of case new and case show
Former-commit-id: 2f60a138f6c8d9b62a8001c20f31450286df100c [formerly 9c2516f98dd5dd69ab2bd635dcda69a7a3afb5f4] [formerly 672a80c9f811ccfbcc8e6096406425c38e1e23ed [formerly fd6f9b98db664274998eb38fd225731a2657f586]]
Former-commit-id: 0dde17c26b277411bd7d706bd71ac2f43ff8df88 [formerly 60f2466c5e3a7c01ca7073b422e5e3b856283940]
Former-commit-id: 38afa2a26e70c6d2221f0c776d5fd431f2d71661

--- a/templates/cases/case_new.html
+++ b/templates/cases/case_new.html
@@ -119,34 +119,26 @@
               </div>
               <div class="news-blocks blank-card blank-card-bluep">
                 <h3>{{ _('Custom Fields') }}</h3>
-                <ul class="list-unstyled contact-infos" >
-                  <li ng-show="showCustomFieldForm">
-                    <div class="row">
-                      <form class="form-inline newLeadForm" role="form">
-                        <div class="form-group sm-group" style="">
-                          <label class="sr-only" for="exampleInputEmail2">{{ _('Field')}}</label>
-                          <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.field" placeholder="{{ _('Enter field name')}}">
-                        </div>
-                        <div class="form-group sm-group" style="">
-                          <label class="sr-only" for="exampleInputEmail2">{{ _('Value')}}</label>
-                          <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.value" placeholder="{{ _('Enter a value')}}">
-                        </div>
-                        <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(customfield,customfields)">{{ _('Add')}}</button>
-                        <button type="submit" class="btn btn-default" ng-click="showCustomFieldForm=false">X</button>
-                      </form>
-                    </div>
-                  </li>
-                  <li ng-repeat="custom in customfields">
-                    <span>
-                      <%= custom.field%>  : <%= custom.value%>
-                    </span>
-                  </li>
-                  <li>
-                    <a ng-click="showCustomFieldForm=true" ng-hide="showCustomFieldForm"class="btn-link addAnotherPhone" data-toggle="modal">
-                      <i class="icon-plus"></i> {{ _('Add a new custom field')}}
-                    </a>
-                  </li>
-                </ul>
+
+                              
+                                <ul class="list-unstyled contact-infos showList" >
+                                    <li ng-repeat="custom in customfields">
+                                    <span>
+                                    <%= custom.field%>  : <%= custom.value%> </span>
+                                      <button type="button" class="close closeContactForm" tabindex="-1" ng-click="deleteInfos(customfields,$index)" data-dismiss="alert"></button>
+                                    </li>
+                                </ul>
+                                <form class="form-inline customField" role="form">
+                                    <div class="form-group sm-group l-sm-inline" style="">
+                                      <label class="sr-only" for="exampleInputEmail2">{{_('Field')}}</label>
+                                      <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.field" placeholder="{{_('Add field name')}}">
+                                    </div>
+                                    <div class="form-group sm-group r-sm-inline" style="">
+                                      <label class="sr-only" for="exampleInputEmail2">{{_('Value')}}</label>
+                                      <input ng-enter="pushElement(customfield,customfields,'customfields')" ng-blur="pushElement(customfield,customfields,'customfields')" type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.value" placeholder="{{_('Add a value')}}">
+                                    </div>
+                                    <!-- <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(customfield,customfields,'customfields')">{{_('Add')}}</button>-->
+                                </form>
               </div>
 
             </div>
