before pull from server
Former-commit-id: 6bcc2286cf36ae0b563b7804b5646b965a8a4ee3 [formerly cc4afe7c3a9e4383dd891aa51940463127c7d3a4] [formerly c3a87e9cc73c1e8c34ede0054dc9f47a18502272 [formerly 6fd108571edafe1b769b4dbd514984b5d48f4020]]
Former-commit-id: f756b4500c4b8469ca21b53dcb8808c86b9783c2 [formerly 9173f5926009703427f497b78dc95903f82f2452]
Former-commit-id: 75d38853eb25731c6da32693f0d15ae5201836e6

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,9 +65,10 @@
 
   <!-- **********************the stripe code******************************* -->
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+
 <script type="text/javascript">
   // This identifies your website in the createToken call below
-  Stripe.setPublishableKey('pk_test_4XcXjg4Qggo2HeVWnGaXwGDB');
+  Stripe.setPublishableKey('pk_live_6Mj1A3QyWeLlvcN6FEeP0HXa');
   console.log("stripe---------------------------------------------------------->")
   // ...
 </script>
@@ -454,8 +455,8 @@
 
   <script type="text/javascript">
 
-     // var ROOT = '/_ah/api';   
-       var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+       var ROOT = '/_ah/api';   
+    //   var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
     var apisToLoad;
     var callback = function() {
