working on payment modal
Former-commit-id: b29de50f9573388e20c773d624e25d47adf3b8fe [formerly 0d2ff42deb052bf92de863973ac10a215886b808] [formerly 159344a56d0ad54098d099c3d480f3e028d162b0 [formerly a9fcdddff2a7bce897590ab6ad8ac0604f1aa77d]]
Former-commit-id: 5c900dcde7540bc47a3ed407af566df0bef0e4a2 [formerly 52d8e759db5577275cf3a494fb4b93d363ac0ac9]
Former-commit-id: f5919ce2a469ef47da1e72eb911fef136e5a9838

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -302,6 +302,7 @@
                           <h3 class="billingTitle"><i class="fa fa-money" style="font-size: 21px;"></i>{{ _('Billing details')}}</h3>
                           <div class="news-block-tags relatedBlock purchaseLicenses">
                             <div class="">
+                              <div id="gmap_canvas" style="width:100%;height:300px; display:none"></div>
                               <form class="form-inline newLeadForm margin-bottom-10" role="form">
                                   <div class="input-icon">
                                      <i class="fa fa-building"></i>
